# 1stIntelSyclDPc-Demo

./: README.md
1stSyclTutorials/: .gitignore  CMakeLists.txt
1stSyclTutorials/02-hello-sycl/: CMakeLists.txt
1stSyclTutorials/02-hello-sycl/src/: main.cpp
1stSyclTutorials/03-show-platfrom/: make.sh  show_platforms.cpp
1stSyclTutorials/04-daemon-sycl/: CMakeLists.txt  README.md
1stSyclTutorials/04-daemon-sycl/src/: main.cpp
1stSyclTutorials/05-robustDeviceDiscovery/: CMakeLists.txt
1stSyclTutorials/05-robustDeviceDiscovery/src/: main.cpp
1stSyclTutorials/06-exampleForDeviceofAnyType/: CMakeLists.txt
1stSyclTutorials/06-exampleForDeviceofAnyType/src/: main.cpp
1stSyclTutorials/07-dependOnAndHostTask/: CMakeLists.txt
1stSyclTutorials/07-dependOnAndHostTask/src/: main.cpp
src-eton-octave-collections/: AO-IVUS V1_1.m  AOIVUS_11.m  ComputeSNR.m  SNR_octave.m  analyseLine231218.m  basicSpectral01_240104.m  demo_chirp240111.m  demo_createVideo.m  demo_diagrams.m  demo_nestedFunction.m  demo_using_correlation.m  hilbert_envelop.m  hilbert_example.m  ivus_SAFT_V1.m  ivus_findMetaImageIOZeroFrame.m  ivus_readAlineShowImg.m  ivus_readLinesBinDataV1.m  ivus_readMhdShowImg.m  ivus_readOscilloscopeDataV1.m  ivus_read_SDR_datas.m  ivus_saft_algo_v01.m  ivus_signalProcessV1.m  logCompress.m  logCompress_demo.m  metaImageIOread.m  mysin.m  polar3d.m  polar3dU.m  recons.m  scanConversionIvusEditionBasedonKwave.m  usingKWave231219.m
src-eton-octave-collections/11-tutorials/: print02.m.sh
src-eton-octave-collections/madinglong/: AOIVUS_m3.m  Polar_text_01.m  README.md  main_readAlinesShowImg.m  massLoadPATspec.m  process_frame.m
waitInputWithTimeOut/: waitInputWithTimeOut.cc
